[package]
name = "mcafee"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Implementation of McAfee's XOR-based cryptographic concepts"
license = "MIT"

[dependencies]
rand = "0.8"
sha2 = "0.10"
chrono = "0.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = { version = "1.7", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
test-case = "3.1"

[[bench]]
name = "crypto_benchmarks"
harness = false

[features]
default = []
parallel = ["dep:rayon"]  # Use dep: prefix for Rust 2021 edition

[[example]]
name = "medical_training"
path = "examples/medical_training.rs"